fix(code markdown): increase contrast
Increase contrast between text & background on single line of code highlight

--- a/src/platform/markdown/_markdown-theme.scss
+++ b/src/platform/markdown/_markdown-theme.scss
@@ -37,7 +37,7 @@
       background-color: mat-color($background, card);
     }
     code {
-      background-color: mat-color($background, hover);
+      background-color: mat-color($background, app-bar);
     }
     .highlight pre,
     pre {
